# palettify-rust

./: .gitignore  Cargo.toml  default.nix  flake.nix
src/: cli.rs  image_processing.rs  main.rs  palette.rs  worker.rs
