[package]
name = "palettify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
fast_image_resize = { version = "6.0.0", features = ["image"] }
image = "0.25.10"
rayon = "1.11.0"
turbojpeg = { version = "1.4.0", features = ["image"] }
